# vertex-clustering

./: CMakeLists.txt  MScProject  README.md  draft.cpp  imgui.ini  premake5.lua  uniform clustering.pseudo
Debug/: imgui.ini
Include/: Interface.hpp
Include/Algorithm/: inspector.hpp  scene.hpp
Include/Interface/: inspector.hpp  interface.hpp
Include/Mesh/: mesh.hpp
Include/Render/: camera.hpp  scene.hpp  shader.hpp
Shader/: shader.frag  shader.vert
Source/: Interface.cpp  main.cpp
Source/Algorithm/: inspector.cpp  scene.cpp  simplification.cpp
Source/Interface/: inspector.cpp  interface.cpp
Source/Mesh/: mesh.cpp
Source/Render/: camera.cpp  scene.cpp  shader.cpp
Source/shader/: shader.frag  shader.vert
libs/: assimp.lua  glad.lua  glfw.lua  glm.lua  imgui.lua  tinyobjloader.lua
libs/Assimp.xcodeproj/: project.pbxproj
libs/Assimp.xcodeproj/xcuserdata/niyoroshitatsu.xcuserdatad/xcschemes/: xcschememanagement.plist
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
